fix text button stickers-qtd

--- a/src/sass/template/_form.sass
+++ b/src/sass/template/_form.sass
@@ -152,6 +152,7 @@ form
 	
 						.button-icon
 							fill: $primary
+							background: $textIcon
 							transition: all .2s
 							&:hover
 								fill: $hover
